# empath

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  makefile  pyproject.toml
docker/: app.sh  celery_beat_start.sh  celery_flower_start.sh  celery_worker_start.sh
src/: alembic.ini  config.py  main.py
src/api/: __init__.py  exception_handlers.py  pagination.py
src/api/article/: controllers.py  providers.py  schemas.py
src/api/auth/: __init__.py  controllers.py  dependencies.py  providers.py  routes.py  schemas.py
src/api/file_storage/: controllers.py  providers.py
src/api/users/: __init__.py  controllers.py  providers.py  schemas.py
src/application/articles/: exceptions.py  mapper.py
src/application/auth/: const.py  exceptions.py
src/application/common/: command.py  dto.py  exceptions.py  query.py
src/application/users/: exceptions.py
src/articles/api/: __init__.py  controllers.py  providers.py  schemas.py
src/articles/application/: exceptions.py  mapper.py
src/articles/domain/: constants.py
src/articles/infrastructure/: mapper.py  models.py
src/auth/api/: controllers.py  providers.py  schemas.py
src/auth/application/: const.py  exceptions.py
src/auth/infrastructure/: middlewares.py  models.py
src/common/api/: __init__.py  exception_handlers.py  pagination.py  schemas.py
src/common/application/: command.py  dto.py  exceptions.py  uow.py
src/common/domain/: exceptions.py
src/common/infrastructure/: models.py
src/db/: uow.py
src/db/models/: __init__.py
src/db/repositories/: base.py
src/di/: container.py  providers.py
src/domain/auth/: exceptions.py
src/domain/common/: constants.py  exceptions.py
src/file_storage/api/: __init__.py  controllers.py  providers.py  schema.py
src/file_storage/application/: exceptions.py
src/infrastructure/adapters/: jwt.py  pwd_manager.py
src/infrastructure/api/: __init__.py  v1.py
src/infrastructure/articles/: mapper.py  models.py
src/infrastructure/auth/: mapper.py  middlewares.py  models.py
src/infrastructure/common/: schemas.py
src/infrastructure/db/: __init__.py  admin.py  config.py  mapper.py  uow.py
src/infrastructure/di/: __init__.py  container.py  containers.py  ioc.py  providers.py
src/infrastructure/users/: mapper.py
src/job/: __init__.py
src/templates/mail/: verify_code_send.html
src/tests/: conftest.py
src/tests/auth/: test_integration.py
src/tests/fixtures/: db.py  generators.py
(+304 files in other folders)
