[project]
name = "empath"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioboto3>=14.0.0",
    "alembic>=1.14.1",
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "cryptography>=44.0.2",
    "dishka>=1.4.2",
    "litestar[standard]>=2.15.1",
    "psycopg[binary,pool]>=3.2.7",
    "pyjwt[crypto]>=2.10.1",
    "redis>=5.2.1",
    "sqladmin-litestar-plugin>=0.2.0",
    "sqlalchemy>=2.0.38",
    "structlog>=25.2.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.21.0",
    "ipython>=9.0.0",
    "mimesis>=18.0.0",
    "pytest-asyncio>=0.26.0",
    "pytest>=8.3.5",
    "testcontainers>=4.10.0",
]

[tool.ruff]
target-version = "py313"
line-length = 119

[tool.ruff.lint]
select = ["ALL"]
ignore = ["B024", "D102", "D107", "D100", "D", "S101"]


[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.pytest.ini_options]
testpaths = "src/tests"
asyncio_mode = "auto"
